...
    case all, unheard, favourites, later, notRecent
    var id: String { rawValue }
    var title: String {
        switch self {
        case .all: "Alle Folgen"
        case .unheard: "Nur ungehörte Folgen"
        case .favourites: "Favoriten"
        case .later: "Später hören"
        case .notRecent: "Seit 30 Tagen nicht gehört"
        }
    }
}

...
